--- a/demo/index.html
+++ b/demo/index.html
@@ -8,18 +8,27 @@
 	<style type="text/css">
 		body
 		{
-			font-family: arial,helvetica;
-			font-size: 12px;
+			background-color: gray;
 		}
 	</style>
 </head>
 <body>
-	<div id="my-slider-1">
+
+	<div class="simple-slider" id="my-slider-1">
 		<ul>
-			<li>Slide 1</li>
-			<li>Slide 2</li>
-			<li>Slide 3</li>
+			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
+			<li title="Texto da legenda 2"><img src="img/img2.jpg"></li>
+			<li title="Texto da legenda 3"><img src="img/img3.jpg"></li>
 		</ul>
 	</div>
+	<br/>
+	<div class="simple-slider" id="my-slider-2">
+		<ul>
+			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
+			<li><img src="img/img2.jpg"></li>
+			<li title="Texto da legenda 3"><img src="img/img3.jpg"></li>
+		</ul>
+	</div>
+
 </body>
 </html>
