--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,11 @@
 	<style type="text/css">
 		body
 		{
-			background-color: gray;
+			font-family: arial,verdana,helvetica;
+			font-size: 12px;
+			background: #CCC;
+			padding: 0px;
+			margin: 0px;
 		}
 	</style>
 </head>
