--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,6 @@
 	</style>
 </head>
 <body>
-
 	<div class="simple-slider" id="my-slider-1">
 		<ul>
 			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
@@ -26,7 +25,17 @@
 		</ul>
 	</div>
 	<br/>
-	<div class="simple-slider" id="my-slider-2">
+	<div class="topo" style="width: 50%; margin: 0 auto;">
+		<div class="simple-slider" id="my-slider-2">
+			<ul>
+				<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
+				<li title="Texto da legenda 2"><img src="img/img2.jpg"></li>
+				<li title="Texto da legenda 3"><img src="img/img3.jpg"></li>
+			</ul>
+		</div>
+	</div>
+	<br/>
+	<div class="simple-slider" id="my-slider-3">
 		<ul>
 			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
 			<li><img src="img/img2.jpg"></li>
