--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
 	</style>
 </head>
 <body>
-	<div class="simple-slider" id="my-slider-1">
+	<div id="my-slider-1">
 		<ul>
 			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
 			<li title="Texto da legenda 2"><img src="img/img2.jpg"></li>
@@ -26,7 +26,7 @@
 	</div>
 	<br/>
 	<div class="topo" style="width: 50%; margin: 0 auto;">
-		<div class="simple-slider" id="my-slider-2">
+		<div id="my-slider-2">
 			<ul>
 				<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
 				<li title="Texto da legenda 2"><img src="img/img2.jpg"></li>
@@ -35,7 +35,7 @@
 		</div>
 	</div>
 	<br/>
-	<div class="simple-slider" id="my-slider-3">
+	<div id="my-slider-3">
 		<ul>
 			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
 			<li><img src="img/img2.jpg"></li>
