- Change background images on demo files.

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,27 +19,27 @@
 <body>
 	<div id="my-slider-1">
 		<ul>
-			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
-			<li title="Texto da legenda 2"><img src="img/img2.jpg"></li>
-			<li title="Texto da legenda 3"><img src="img/img3.jpg"></li>
+			<li title="Texto da legenda 1"><img src="http://lorempixel.com/800/300/nature/8/Slide-1/"></li>
+			<li title="Texto da legenda 2"><img src="http://lorempixel.com/800/300/city/5/Slide-2/"></li>
+			<li title="Texto da legenda 3"><img src="http://lorempixel.com/800/300/technics/7/Slide-3/"></li>
 		</ul>
 	</div>
 	<br/>
 	<div class="topo" style="width: 50%; margin: 0 auto;">
 		<div id="my-slider-2">
 			<ul>
-				<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
-				<li title="Texto da legenda 2"><img src="img/img2.jpg"></li>
-				<li title="Texto da legenda 3"><img src="img/img3.jpg"></li>
+				<li title="Texto da legenda 1"><img src="http://lorempixel.com/800/300/nature/8/Slide-1/"></li>
+				<li title="Texto da legenda 2"><img src="http://lorempixel.com/800/300/city/5/Slide-2/"></li>
+				<li title="Texto da legenda 3"><img src="http://lorempixel.com/800/300/technics/7/Slide-3/"></li>
 			</ul>
 		</div>
 	</div>
 	<br/>
 	<div id="my-slider-3">
 		<ul>
-			<li title="Texto da legenda 1"><img src="img/img1.jpg"></li>
-			<li><img src="img/img2.jpg"></li>
-			<li title="Texto da legenda 3"><img src="img/img3.jpg"></li>
+			<li title="Texto da legenda 1"><img src="http://lorempixel.com/800/300/nature/8/Slide-1/"></li>
+			<li><img src="http://lorempixel.com/800/300/city/5/Slide-2/"></li>
+			<li title="Texto da legenda 3"><img src="http://lorempixel.com/800/300/technics/7/Slide-3/"></li>
 		</ul>
 	</div>
 
