- Update demo file; - Lint JS; - Minor bugfix.

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,11 +17,13 @@
 	</style>
 </head>
 <body>
+
 	<div id="my-slider-1">
 		<ul>
 			<li title="Texto da legenda 1"><img src="http://lorempixel.com/800/300/nature/8/Slide-1/"></li>
 			<li title="Texto da legenda 2"><img src="http://lorempixel.com/800/300/city/5/Slide-2/"></li>
 			<li title="Texto da legenda 3"><img src="http://lorempixel.com/800/300/technics/7/Slide-3/"></li>
+			<li title="Texto da legenda 4"><img src="http://lorempixel.com/800/300/technics/4/Slide-4/"></li>
 		</ul>
 	</div>
 	<br/>
