--- a/demo/index.html
+++ b/demo/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 	<title>Image Sprite Play - Demo</title>
-	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="../src/jquery.simpleSlider.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<style type="text/css">
 		body
 		{
@@ -45,5 +43,8 @@
 		</ul>
 	</div>
 
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="../src/jquery.simpleSlider.js"></script>
+	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
