- Update demo files; - Create dist files with Gulp.

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,6 @@
 	</style>
 </head>
 <body>
-
 	<div id="my-slider-1">
 		<ul>
 			<li title="Texto da legenda 1"><img src="http://lorempixel.com/800/300/nature/8/Slide-1/"></li>
@@ -44,7 +43,7 @@
 	</div>
 
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="../src/jquery.simpleSlider.js"></script>
+	<script type="text/javascript" src="../dist/jquery.simpleSlider.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
